Replace URL with URI in test class
Java URL implementation might call to network for DNS resolving when
equals() or hashCode() methods are called. The use of java.net.URL is
discouraged in favor of using java.net.URI.